--- a/src/main/resources/templates/UserDashBoard.html
+++ b/src/main/resources/templates/UserDashBoard.html
@@ -23,9 +23,8 @@
         </div>
         <h2 style="margin-right:846px; font-size:20px;">Explanation link file 1: Format.doc</h2>
         <h2 style="margin-right:850px; font-size:20px;">Explanation link file 2: Guidelines</h2>
-        <h2 style="margin-right:480px; font-size:20px; margin-bottom:20px;"><p>Explanation link file 3: How to confirm the target product before revision </p>
-        <p>(SAP(reverse expansion)</p>
-        </h2>
+        <h2 style="margin-right:480px; font-size:20px; margin-bottom:20px;"></h2>
+        <h2 style="margin-right:240px; font-size:20px; margin-bottom:20px;">Explanation link file 3: How to confirm the target product before revision (SAP(reverse expansion)</h2>
         <div class="return">            
         <a href="#" class="dashboard-button" th:href="@{/return}" style="margin-left:300px;">Return</a>
        </div>
