--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -24,7 +24,7 @@
 		}
 
 		form {
-			max-width: 600px;
+			max-width: 800px;
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
@@ -113,12 +113,14 @@
 	<!--  Added for Delete page Message-->
 	<!--	<p style="text-align: center;" id="recordDisplay" th:text="${records}"></p>
 -->
+	<form method="post" id="theForm" class="form-horizontal" th:action="@{/reset(ssoid = ${ssoid})}">
+	</form>
 	<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}">
 		<div class="label-container" style="margin-top: 20px;">
 			<label for="stmNumber">STM Number <br>(Quality inspection
 				method_master quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
-				pattern="[a-zA-Z0-9\u3040-\u30FF]*"
+				pattern="[a-zA-Z0-9\u3040-\u30FF]*" th:value="${stmnum}"
 				oninvalid="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');"
 				oninput="InvalidMsg(this,'Enter only Alphanumeric and Japanese Characters.');"
 				style="margin-top: 3%;" />
@@ -127,13 +129,14 @@
 		<div class="label-container">
 			<label for="revisionNumber">Revision Number</label>
 			<input type="text" id="Revision number" maxlength="4" name="stmVersion" pattern="[0-9]*"
-				oninvalid="InvalidMsg(this, 'Enter Only Numbers.');" oninput="InvalidMsg(this, 'Enter Only Numbers.');"
-				onkeydown="enterClick(2,event)" style="width: 11%;margin-right: 35%;" />
+				th:value="${stmver}" oninvalid="InvalidMsg(this, 'Enter Only Numbers.');"
+				oninput="InvalidMsg(this, 'Enter Only Numbers.');" onkeydown="enterClick(2,event)"
+				style="width: 11%;margin-right: 35%;" />
 		</div>
 
 		<div class="label-container">
 			<label for="linkDestination">Link Destination(STM_parent number)</label>
-			<input type="text" id="Link destination" name="linkDestination" maxlength="15"
+			<input type="text" id="Link destination" name="linkDestination" maxlength="15" th:value="${linkDest}"
 				onkeydown="enterClick(3,event)"
 				pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF]+$"
 				oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"
@@ -143,14 +146,14 @@
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
-				pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
+				th:value="${txtjp}" pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
 				oninvalid="InvalidMsg(this, 'Enter Only Japanese characters.');"
 				oninput="InvalidMsg(this, 'Enter Only Japanese characters.');" />
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label>
-			<input type="text" id="English" name="textShortEN" maxlength="200" pattern="[a-zA-Z]*"
+			<input type="text" id="English" name="textShortEN" maxlength="200" pattern="[a-zA-Z]*" th:value="${txteng}"
 				onkeydown="enterClick(5,event)" oninvalid="InvalidMsg(this, 'Please input alphabet characters only.');"
 				oninput="InvalidMsg(this, 'Please input alphabet characters only.');" />
 		</div>
@@ -160,14 +163,14 @@
 				date)</label>
 			<p style="margin-left: 27%;height: 30%;">
 				<input type="text" s class="dobField timePeriodFrom1 datepicker-input" placeholder="yyyy/MM/dd"
-					name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
-					style="margin-left: -31%;width: 49%;" title="Please Enter Date in yyyy/MM/dd."
+					th:value="${startdate}" name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)"
+					id="draft_start_date" style="margin-left: -31%;width: 49%;" title="Please Enter Date in yyyy/MM/dd."
 					oninput="formatDraftingDate(this)"
 					pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
 					onblur="validateDate(this, 'startDraftDateError')" />
 				~
 				<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
-					style="margin-left: 2%;width: 49%;" name="endDraftDate" maxlength="10"
+					th:value="${enddate}" style="margin-left: 2%;width: 49%;" name="endDraftDate" maxlength="10"
 					onkeydown="enterClick(7,event)" id="draft_end_date" title="Please Enter Date in yyyy/MM/dd."
 					oninput="formatDraftingDate(this)"
 					pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
@@ -178,7 +181,7 @@
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
 			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
-				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$" th:value="${final}"
 				onkeydown="enterClick(8,event)"
 				oninvalid="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');"
 				oninput="InvalidMsg(this, 'Enter only Characters,Japanese and Space only allowed.');" />
@@ -187,7 +190,7 @@
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
 			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9\u3040-\u30FF]*"
-				onkeydown="enterClick(9,event)"
+				th:value="${oldstm}" onkeydown="enterClick(9,event)"
 				oninvalid="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');"
 				oninput="InvalidMsg(this, 'Enter only Alphanumeric and Japanese Characters.');" />
 		</div>
@@ -226,6 +229,8 @@
 				onkeydown="enterClick(11,event)">Reset</button>
 			<button type="submit" class="btn btn-primary view">View</button>
 
+			<button class="btn btn-primary menu" style="color: white;background-color: limegreen;" type="button"
+				th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
 		</div>
 	</form>
 	<!--<form th:action="@{/viewClick(ssoid = ${ssoid})}" method="post">
@@ -236,11 +241,11 @@
 
 	<div class="table-responsive table-layout" style="margin-left: 2%;margin-right: 1%;">
 		<table class="table" id="searchTable" title="Confidential information" style="width: 100%;">
-			<thead style="text-align: center;">
+			<thead>
 				<tr>
 					<th>No</th>
 					<th>STM_No</th>
-					<th>STM_Version</th>
+					<th style="width: 7%;">STM_Version</th>
 					<th>Link_Destination</th>
 					<th>Text_Short_JP</th>
 					<th>Text_Short_EN</th>
@@ -255,10 +260,10 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="n,iterStat:${list}" onclick="" class="tableHover">
+				<tr th:each="n,iterStat:${list}" onclick="" class="tableHover" id="row">
 					<td style="width: 3%;" th:text="${iterStat.count + 0}"></td>
 					<td th:text="${n.getStmNo()}"></td>
-					<td style="text-align: right;width: 5%;padding-right: 10px;" th:text="${n.getStmVersion()}"></td>
+					<td style="text-align: right;padding-right: 5px;" th:text="${n.getStmVersion()}"></td>
 					<td style="width:8%;" th:text="${n.getLinkDestination()}"></td>
 					<td th:text="${n.getTextShortJP()}"></td>
 					<td th:text="${n.getTextShortEN()}"></td>
@@ -274,10 +279,6 @@
 			</tbody>
 			</tbody>
 		</table>
-	</div>
-	<div>
-		<button class="btn btn-primary menu" style="color: white;background-color: limegreen;" type="button"
-			th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
 	</div>
 	<!--  added[S] Amulya For Timer purpose -->
 	<script th:inline="javascript">
