--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -129,6 +129,7 @@ th {
   background: #eea647;
   font-size: 17px;
   font-weight: 900;
+  text-align: center;
 }
 tr{
 	height: 40px;
@@ -138,7 +139,7 @@ tr{
 	padding-left: 70px;
 }
 td{
-	padding-left: 10px;
+	padding-left: 5px;
 }
 .search {
 	width: 30%;
